--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+
+# Auth
+NEXTAUTH_SECRET=your_hash_generated_from_https://generate-secret.vercel.app/32
+GITHUB_ID=
+GITHUB_SECRET=
