chore: add google secret and client for auth within env template

--- a/.env.template
+++ b/.env.template
@@ -8,5 +8,9 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 
 # Auth
 NEXTAUTH_SECRET=your_hash_generated_from_https://generate-secret.vercel.app/32
+#Google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# Github
 GITHUB_ID=
 GITHUB_SECRET=
